material design import

--- a/src/main/webapp/views/index.html
+++ b/src/main/webapp/views/index.html
@@ -3,6 +3,11 @@
 
    <head>
       <meta charset="UTF-8">
+      <link href="../assets/styles/mui-0.9.15/mui.min.css" rel="stylesheet" type="text/css" />
+      <link href="../assets/styles/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+      <link href="../styles/common.min.css" rel="stylesheet" type="text/css" />
+      <script src="../assets/js/mui-0.9.15/mui.min.js"></script>
+      <script src="../assets/js/jquery-3.2.1/jquery-3.2.1.min.js"></script>
       <title>SpringBoot ReactJS Start</title>
    </head>
 
