--- a/web_src/less/default.less
+++ b/web_src/less/default.less
@@ -167,8 +167,9 @@ buttons {
  */
 
 #footer {
-  background-color: #0288D1;
+  background-color: #78909C;
   color: #fff;
+  margin-top: 16px;
 }
 
 #footer a {
