--- a/src/main/webapp/views/index.html
+++ b/src/main/webapp/views/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
 
-   <head>
-      <meta charset="UTF-8">
-      <link href="../assets/mui-0.9.16/css/mui.min.css" rel="stylesheet" type="text/css" />
-      <link href="../assets/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-      <link href="../styles/common.min.css" rel="stylesheet" type="text/css" />
-      <link href="../assets/mdl/material.min.css" rel="stylesheet" type="text/css" />
-      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-      <script src="../assets/mui-0.9.16/js/mui.min.js"></script>
-      <script src="../assets/jquery-3.2.1/jquery-3.2.1.min.js"></script>
-      <script src="../assets/mdl/material.min.js"></script>
-      <title>SpringBoot ReactJS Start</title>
-   </head>
+    <head>
+        <meta charset="UTF-8">
+        <link href="../assets/mui-0.9.16/css/mui.min.css" rel="stylesheet" type="text/css" />
+        <link href="../assets/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+        <link href="../styles/common.min.css" rel="stylesheet" type="text/css" />
+        <link href="../assets/mdl/material.min.css" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <script src="../assets/mui-0.9.16/js/mui.min.js"></script>
+        <script src="../assets/jquery-3.2.1/jquery-3.2.1.min.js"></script>
+        <script src="../assets/mdl/material.min.js"></script>
+        <title>SpringBoot ReactJS Start</title>
+    </head>
 
-   <body>
-      <div id="root"></div>
-      <script src="../js/bundle.min.js"></script>
-   </body>
+    <body>
+        <!-- https://github.com/facebook/react/issues/6472 로 인한 주석 처리 -->
+        <div id="root"></div>
+        <!--<script src="../js/bundle.min.js"></script>-->
+    </body>
 
 </html>
