--- a/src/main/webapp/views/index.html
+++ b/src/main/webapp/views/index.html
@@ -11,10 +11,10 @@
         <script src="/assets/jquery-3.2.1/jquery-3.2.1.min.js"></script>
         <script src="/assets/mdl/material.min.js"></script>
         <title>SpringBoot ReactJS Start</title>
-    <link href="/styles/app.bundle.css" rel="stylesheet"></head>
+    </head>
 
     <body>
         <div id="root"></div>
-    <script type="text/javascript" src="/js/vendor.bundle.js"></script><script type="text/javascript" src="/js/app.bundle.js"></script></body>
+    <script type="text/javascript" src="/js/vendor.1b2730d8bd2cd7cfa1c7.js"></script><script type="text/javascript" src="/js/app.b22c814f8fa1db105ea4.js"></script></body>
 
 </html>
